fix: right position vertical align corrected

--- a/src/components/Popup/Popup.sass
+++ b/src/components/Popup/Popup.sass
@@ -42,7 +42,7 @@
 			transform-origin: 100% 50%
 
 		@include selectors_ifHostHasModifier('.Popup__PositionRight.Popup__Open')
-			transform: scale(1) translateY(100%) translateY(-100%) translateZ(0)
+			transform: scale(1) translateY(100%) translateY(-50%) translateZ(0)
 
 	.Popup_Bubble
 		$border-radius: 4px
@@ -86,7 +86,6 @@
 				top: -6px
 
 		@include selectors_ifHostHasModifier('.Popup__PositionRight')
-			top: 10px
 			margin-left: 0
 			transform: scale(1) translateX(100%) translateY(-50%) translateZ(0)
 
